# eodhd-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: alternative.rs  datetime.rs  end_of_period.rs  fundamentals.rs  historic_intraday.rs  lib.rs  realtime.rs
src/alternative/: earnings.rs  economic_event.rs  sentiment.rs
src/realtime/: delayed.rs  forex.rs  socket.rs  us.rs
