[package]
name = "eodhd-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
chrono-tz = { version = "0.4", features = ["serde"] }
calamine = { version = "0.18.0", features = ["dates"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
json_value_merge = "1.1"
csv = "1.1"

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
async-trait = "0.1.57"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures-signals = "0.3.30"

env_logger = "0.9"
log = "0.4.17"

reqwest = { version = "0.11.11", features = ["json"] }
url = "2.0.0"
uuid = { version = "1.1.2", features = [
    "v4", 
    "fast-rng", 
    "macro-diagnostics", 
]}
