[package]
name = "eodhd_rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A community rust wrapper around the EODHD API"
keywords = ["economics", "stock", "api", "eodhd"]
categories = ["api-bindings"]
readme = "README.md"
homepage = "https://github.com/n-0/eodhd-rs"
repository = "https://github.com/n-0/eodhd-rs"
authors = ["Niklas Jona Lohmann <n-0@github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
calamine = { version = "0.18.0", features = ["dates"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures-signals = "0.3.30"

env_logger = "0.9"
log = "0.4.17"

reqwest = { version = "0.11.11", features = ["json"] }
url = "2.0.0"

[lib]
name = "eodhd_rs"
path = "src/lib.rs"
